--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
