--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,11 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.8.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-i18next": "^13.5.0",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2"
   },
   "devDependencies": {
     "@types/node": "^18.18.0",
