--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,12 +23,16 @@
     "react-i18next": "^13.5.0",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.4.2"
+    "i18next-http-backend": "^2.4.2",
+    "three": "^0.159.0",
+    "@react-three/fiber": "^8.15.0",
+    "@react-three/drei": "^9.92.0"
   },
   "devDependencies": {
     "@types/node": "^18.18.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/three": "^0.159.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
